--- a/assets/styles/pool.css
+++ b/assets/styles/pool.css
@@ -351,7 +351,7 @@ input[type="text"] {
 }
 
 .glow {
-  text-shadow: 0 0 2px rgba(6, 255, 150, 0.29), 0 0 4px rgba(14, 207, 216, 0.38)
+  text-shadow: 0 0 2px rgba(6, 255, 150, 0.15), 0 0 4px rgba(14, 207, 216, 0.23)
 }
 
 .pt-panel {
